--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
           "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/tictactoe",
+            "baseHref": "/tictactoe/",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
